# Automation-JobOpenings

./: .env.example  README.md  bot_gupy.py  extraction_models_ollama.py  knowledge_base.json  main.py  pyproject.toml
json/: knowledge_base.json  ollama_models.json  vagas_processadas.json
