[project]
name = "automation-jobopenings"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pdfplumber>=0.11.9",
    "playwright>=1.58.0",
    "psutil>=7.2.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
